Change swagger for  /api/user/update/{id}
