# src/Controller/UserController.php
@@ -231,6 +231,11 @@ class UserController extends AbstractController
      *                     @OA\Property(property="mesureWater", type="integer"),
      *                     @OA\Property(property="mesureWaste", type="integer"),
      *                     @OA\Property(property="mesureElectricity", type="integer"),
+     *                     @OA\Property(property="saving_electricity", type="integer"),
+     *                     @OA\Property(property="saving_waste", type="integer"),
+     *                     @OA\Property(property="saving_gas", type="integer"),
+     *                     @OA\Property(property="saving_water", type="integer"),
+     *                     @OA\Property(property="saving_transport", type="integer"),
      *                     @OA\Property(property="nbMonthsRegistered", type="integer"),
      *                     @OA\Property(property="nbValidatedTaskWater", type="integer"),
      *                     @OA\Property(property="nbValidatedTaskGas", type="integer"),
